Fix histgram size on safari

--- a/src/components/App/App.module.sass
+++ b/src/components/App/App.module.sass
@@ -62,7 +62,8 @@
     max-width: 400px
 
 .controlls
-  display: flex
+  display: grid
+  grid-auto-flow: column
   align-items: center
   justify-content: center
 
