--- a/src/components/Histogram/Histogram.module.sass
+++ b/src/components/Histogram/Histogram.module.sass
@@ -1,6 +1,7 @@
 .svg
-  max-height: 50px
+  height: 50px
   width: auto
+  max-width: 100%
 
 .rect
   cursor: pointer
